Fix some weirdness on mobile. May be only valid with Alerts

--- a/src/assets/scss/components/_alert.scss
+++ b/src/assets/scss/components/_alert.scss
@@ -92,7 +92,6 @@ Alert styling.
 
 .vl-alert {
 	position: relative;
-	width: $grid-row-width;
 	max-width: 100%;
 	margin: 0 auto;
 	font-size: 1.2em;
