--- a/src/assets/scss/modules/_content.scss
+++ b/src/assets/scss/modules/_content.scss
@@ -6,10 +6,10 @@ body:not(.has-post-thumbnail) {
 	
 	.main-wrap {
 
-	  padding-top: 1rem;
+	  padding-top: 7rem;
 
 	  @include breakpoint(medium) {
-		padding-top: 3rem;
+		  padding-top: 3rem;
 	  }
 		
 	}
