--- a/src/assets/scss/modules/_top-bar-extra.scss
+++ b/src/assets/scss/modules/_top-bar-extra.scss
@@ -1,6 +1,7 @@
 .top-bar.extra {
 
 	background: #fff;
+	position: relative;
 	
 	border-bottom: rem-calc(1) solid $dark-color;
 	
